Add downward exit door

--- a/packages/valve/clean_style/items/exit_door/vbsp_config.cfg
+++ b/packages/valve/clean_style/items/exit_door/vbsp_config.cfg
@@ -57,4 +57,49 @@
 				}
 			}
 		}
+		
+	"Condition"
+		{
+		"Priority"	"10"
+		"instance"	"<ITEM_EXIT_DOOR:bee2_vert_down>"
+		"Result"
+			{
+			// Downward exits have signage already, we don't want the automatic ones.
+			"setOption"
+				{
+				"remove_exit_signs" "1"
+				}
+			"Pack" "PACK_BEE2_NOPAINT_ARROW_CLEAN"
+			"Pack" "PACK_BEE2_NOPAINT_EXIT_SIGN"
+			}
+		"Condition"
+			{
+			"ifPreview" "1"
+			"Result"
+				{
+				"addOverlay"
+					{
+					"File" "<ITEM_EXIT_DOOR:bee2_vert_down_preview>"
+					}
+				}
+			}
+		"Condition"
+			{
+			"Game" "Aperture Tag"
+			"Result"
+				{
+				"addOverlay"
+					{
+					"File" "<ITEM_EXIT_DOOR:bee2_vert_down_tag_fizz>"
+					}
+				}
+			"Else"
+				{
+				"addOverlay"
+					{
+					"File" "<ITEM_EXIT_DOOR:bee2_vert_down_p2_fizz>"
+					}
+				}
+			}
+		}
 	}
