Upgrade Physler to allow portal shots

--- a/packages/paintFizzler/items/50s/vbsp_config.cfg
+++ b/packages/paintFizzler/items/50s/vbsp_config.cfg
@@ -23,6 +23,7 @@
 				"PaintFizzler"	"1"
 				"Fizzler"		"1"
 				}
+			"Pack" "PACK_CUST_FIZZLER_RETRO"
 			"CustFizzler"
 				{
 				"ModelName" ""
