--- a/packages/phys_shield/items/clean/vbsp_config.cfg
+++ b/packages/phys_shield/items/clean/vbsp_config.cfg
@@ -1,17 +1,45 @@
 "Conditions"
 	{
+	// FizzlerModelPair runs only on start sides, so we need to first overlay
+	// them all
+	"Condition"
+		{
+		"Priority"  "-1"
+		"instance"	"instances/BEE2/clean/items/physler/model.vmf"
+		"Result"
+			{
+			"AddOverlay"
+				{
+				"File" "instances/BEE2/clean/items/physler/model_common.vmf"
+				}
+			}
+		}
+		
+	"Condition"
+		{
+		"instance"	"instances/BEE2/clean/items/physler/model.vmf"
+		"Result"
+			{
+			"FizzlerModelPair"
+				{
+				"StartInst"		"instances/BEE2/clean/items/physler/model_start.vmf"
+				"EndInst"		"instances/BEE2/clean/items/physler/model_end.vmf"
+				"MidInst"		""
+				"uniqueName"    "1"
+				}
+			}
+		}
 	"Condition"  
 		{ 
-		"instance"	"instances/BEE2/clean/items/phys_shield/pshield_base.vmf"  
+		"instance"	"instances/BEE2/clean/items/physler/base.vmf"  
 		"result"  
 			{
-			"Pack" "PACK_FR_PLAYER_CLIP_ELECTRIC"
-			"Pack" "PACK_FR_PHYS_SHIELD_CLEAN"
+			"Pack" "PACK_FG_PHYSLER_CLEAN"
 			"Pack" "PACK_BEE2_CUST_FIZZ_MDL"
 			"Has"
 				{
-				"Fizzler"	"1"
-				"FR_pshield"	"1"
+				"Fizzler"   "1"
+				"Physler"   "1"
 				}
 			"CustFizzler"
 				{
@@ -19,34 +47,45 @@
 				"UniqueModel"	"0"
 				"Brush"
 					{
-					"Name"		"fizz"
+					"Name"		"fx"
 					"Left"		"BEE2/fizz/phys_shield/clean_pshield_left"
 					"Center"	"BEE2/fizz/phys_shield/clean_pshield_center"
 					"Right"		"BEE2/fizz/phys_shield/clean_pshield_right"
 					"Short"		"BEE2/fizz/phys_shield/physics_shield"
 					"Keys"
 						{
-						"classname" 	"trigger_portal_cleanser"
-						"Spawnflags" 	"4096" // Nothing
-						"visible"		"1"
-						"usescanline"	"1"
-						"StartDisabled"	"1"
+						"classname" 	"func_brush"
+						"Solidity"		"1" // Never solid
 						}
 					}
 				"Brush"
 					{
 					"Name"		"clip"
-					"Left"		"BEE2/fizz/fourthreaper/player_clip_electric"
-					"Center"	"BEE2/fizz/fourthreaper/player_clip_electric"
-					"Right"		"BEE2/fizz/fourthreaper/player_clip_electric"
-					"Short"		"BEE2/fizz/fourthreaper/player_clip_electric"
-					"Nodraw"	"BEE2/fizz/fourthreaper/player_clip_electric"
+					"Left"		"tools/toolstrigger"
+					"Center"	"tools/toolstrigger"
+					"Right"		"tools/toolstrigger"
+					"Short"		"tools/toolstrigger"
 					"Keys"
 						{
 						"classname" 	"func_clip_vphysics"
-						"Spawnflags" 	"2" // Ignore +USE
-						"solidity"		"0" // Toggle
-						"solidbsp"      "1" // Make footstep sounds work
+						}
+					}
+				"Brush"
+					{
+					"Name"		    "fx_trig"
+					"Left"		    "tools/toolstrigger"
+					"Center"	    "tools/toolstrigger"
+					"Right"		    "tools/toolstrigger"
+					"Short"		    "tools/toolstrigger"
+					"MergeBrushes"  "1"
+					"Thickness"     "4"
+					"Keys"
+						{
+						"classname"     "trigger_multiple"
+						"wait"          "0.1"
+						"spawnflags"    "8" // Physics Objects
+						"vscripts"      "BEE2/trig_touch_fx.nut"
+						"thinkfunc"     "ThinkFunc"
 						}
 					}
 				}
