--- a/packages/phys_shield/items/retro/vbsp_config.cfg
+++ b/packages/phys_shield/items/retro/vbsp_config.cfg
@@ -5,9 +5,8 @@
 		"instance"	"instances/BEE2/50s/items/phys_shield/pshield_base.vmf"  
 		"result"  
 			{
-			"Pack" "PACK_FR_PLAYER_CLIP_ELECTRIC"
-			"Pack" "PACK_FR_PHYS_SHIELD_50S"
-			"Pack" "PACK_BEE2_CUST_FIZZ_MDL"
+			"Pack" "PACK_FG_PHYS_SHIELD_RETRO"
+			"Pack" "PACK_CUST_FIZZLER_RETRO"
 			"Has"
 				{
 				"Fizzler"	"1"
@@ -36,17 +35,14 @@
 				"Brush"
 					{
 					"Name"		"clip"
-					"Left"		"BEE2/fizz/fourthreaper/player_clip_electric"
-					"Center"	"BEE2/fizz/fourthreaper/player_clip_electric"
-					"Right"		"BEE2/fizz/fourthreaper/player_clip_electric"
-					"Short"		"BEE2/fizz/fourthreaper/player_clip_electric"
-					"Nodraw"	"BEE2/fizz/fourthreaper/player_clip_electric"
+					"Left"		"tools/toolstrigger"
+					"Center"	"tools/toolstrigger"
+					"Right"		"tools/toolstrigger"
+					"Short"		"tools/toolstrigger"
+					"Nodraw"	"tools/toolstrigger"
 					"Keys"
 						{
 						"classname" 	"func_clip_vphysics"
-						"Spawnflags" 	"2" // Ignore +USE
-						"solidity"		"0" // Toggle
-						"solidbsp"      "1" // Make footstep sounds work
 						}
 					}
 				}
