Use new logic for half-wall items.

--- a/packages/blocks/items/half_wall/vbsp_config.cfg
+++ b/packages/blocks/items/half_wall/vbsp_config.cfg
@@ -1,17 +1,5 @@
 "Conditions"
 	{
-	"Condition"
-		{
-		"instance" "<ITEM_BEE2_HALF_WALL>"
-		"Result"
-			{
-			"HollowBrush"
-				{
-				"RemoveFace" "0"
-				}
-			}
-		}
-		
 	// Half wall
 	// Ignore what surface type is set - that's just confusing. It's not needed, just rotate 180.
 	"Condition"
@@ -19,25 +7,29 @@
 		"instance" "<ITEM_BEE2_HALF_WALL:weighted_white, weighted_black>"
 		"Result"
 			{
-			"TemplateBrush"
+			"SetTile"
 				{
-				"ID"            "BEE2_WALL_HALF"		
-				"replaceBrush"  "0 0 0"
+				"Tile" "WWBB"
+				"Tile" "WWBB"
+				"Tile" "WWBB"
+				"Tile" "WWBB"
 				}
 			"Changeinstance" ""
 			}
 		}
 		
-	// centered half wall
+	// Centered half wall
 	"Condition"
 		{
 		"instance" "<ITEM_BEE2_HALF_WALL:cube_white>"
 		"Result"
 			{
-			"TemplateBrush"
+			"SetTile"
 				{
-				"ID"            "BEE2_WALL_HALF_CENTER"
-				"replaceBrush"  "0 0 0"
+				"Tile" "BWWB"
+				"Tile" "BWWB"
+				"Tile" "BWWB"
+				"Tile" "BWWB"
 				}
 			"Changeinstance" ""
 			}
@@ -47,11 +39,12 @@
 		"instance" "<ITEM_BEE2_HALF_WALL:cube_black>"
 		"Result"
 			{
-			"TemplateBrush"
+			"SetTile"
 				{
-				"ID"            "BEE2_WALL_HALF_CENTER"
-				"force"         "invert"
-				"replaceBrush"  "0 0 0"
+				"Tile" "WBBW"
+				"Tile" "WBBW"
+				"Tile" "WBBW"
+				"Tile" "WBBW"
 				}
 			"Changeinstance" ""
 			}
@@ -63,10 +56,12 @@
 		"instance" "<ITEM_BEE2_HALF_WALL:sphere_white>"
 		"Result"
 			{
-			"TemplateBrush"
+			"SetTile"
 				{
-				"ID"            "BEE2_WALL_PLUS"
-				"replaceBrush"  "0 0 0"
+				"Tile" "BWWB"
+				"Tile" "WWWW"
+				"Tile" "WWWW"
+				"Tile" "BWWB"
 				}
 			"Changeinstance" ""
 			}
@@ -76,12 +71,13 @@
 		"instance" "<ITEM_BEE2_HALF_WALL:sphere_black>"
 		"Result"
 			{
-			"TemplateBrush"
+			"SetTile"
 				{
-				"ID"            "BEE2_WALL_PLUS"
-				"force"         "invert"
-				"replaceBrush"  "0 0 0"
-				}
+				"Tile" "WBBW"
+				"Tile" "BBBB"
+				"Tile" "BBBB"
+				"Tile" "WBBW"
+			}
 			"Changeinstance" ""
 			}
 		}
