Change names for textures

--- a/packages/valve/clean_style/styles/clean/vbsp_config.cfg
+++ b/packages/valve/clean_style/styles/clean/vbsp_config.cfg
@@ -4,40 +4,36 @@
 		{
 		"Floor"      "metal/black_floor_metal_001a"
 		
-		"Ceiling"    "metal/black_ceiling_metal_001a"
-		"Ceiling"    "metal/black_ceiling_metal_001a"
-		"Ceiling"    "metal/black_ceiling_metal_001a"
-		"Ceiling"    "metal/black_wall_metal_002a" // 2x2 wall
-		"Ceiling"    "metal/black_wall_metal_002b" // 4x4 wall
+		"Ceiling"       "metal/black_ceiling_metal_001a"
+		"Ceiling"       "metal/black_ceiling_metal_001a"
+		"Ceiling"       "metal/black_ceiling_metal_001a"
+		"Ceiling"       "metal/black_wall_metal_002b"
+		"Ceiling_2x2"   "metal/black_wall_metal_002a"
 		
-		"Wall"       "metal/black_wall_metal_002c" // 1x1
-		"Wall"       "metal/black_wall_metal_002e" // 2x1
-		"Wall"       "metal/black_wall_metal_002e"
-		"Wall"       "metal/black_wall_metal_002a" // 2x2
-		"Wall"       "metal/black_wall_metal_002b" // 4x4
+		"1x1"          "metal/black_wall_metal_002c"
+		"2x1"          "metal/black_wall_metal_002e"
 		
-		"4x4"        "metal/black_wall_metal_002b"
-		"2x2"        "metal/black_wall_metal_002a"
+		"4x4"           "metal/black_wall_metal_002b"
+		"2x2"           "metal/black_wall_metal_002a"
 		}
 	"White"
 		{
-		"Floor"     "tile/white_floor_tile002a"
+		"Floor"         "tile/white_floor_tile002a"
 		
-		"Ceiling"   "tile/white_ceiling_tile002a"
-		"Ceiling"   "tile/white_ceiling_tile002a"
-		"Ceiling"   "tile/white_ceiling_tile002a"
-		"Ceiling"   "tile/white_wall_tile003c"
-		"Ceiling"   "tile/white_wall_tile003c"
+		"Ceiling"       "tile/white_ceiling_tile002a"
+		"Ceiling"       "tile/white_ceiling_tile002a"
+		"Ceiling"       "tile/white_ceiling_tile002a"
+		"Ceiling_2x2"   "tile/white_wall_tile003c"
+		"Ceiling"       "tile/white_wall_tile003c"
 		
-		"Wall"      "tile/white_wall_tile003a" // 2x1 tile
-		"Wall"      "tile/white_wall_tile003a"
-		"Wall"      "tile/white_wall_tile003c" // 2x2 tile
-		"Wall"      "tile/white_wall_tile003l" // 1x1 tile
-		"Wall"      "tile/white_wall_tile003l"
-		"Wall"      "tile/white_wall_tile003i" // 1x1 with marking
+		"2x1"           "tile/white_wall_tile003a"
+		"1x1"           "tile/white_wall_tile003l"
+		"1x1"           "tile/white_wall_tile003l"
+		"1x1"           "tile/white_wall_tile003i" // 1x1 with marking
 		
-		"4x4"       "tile/white_wall_tile003f"
-		"2x2"       "tile/white_wall_tile003c"
+		"4x4"           "tile/white_wall_tile003f"
+		"2x2"           "tile/white_wall_tile003c"
+		"2x1"           "tile/white_wall_tile003a"
 		}
 	"Special"
 		{
