Add weighted and cube button variants

--- a/packages/tspen/ret_button/items/floor_clean/vbsp_config.cfg
+++ b/packages/tspen/ret_button/items/floor_clean/vbsp_config.cfg
@@ -1,5 +1,162 @@
 "Conditions"
 	{
+	// Floor Button
+	"Condition"
+		{
+		"instance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:weighted_white>"
+		"Result"
+			{
+			"TemplateBrush"
+				{
+				"ID"    "TSPEN_BTN_FLOOR_CLEAN:left"	
+				"Force" "white"
+				"Keys"
+					{
+					"Classname" "func_brush"
+					"Origin"    "0 64 -65"
+					}
+				"LocalKeys"
+					{
+					"Targetname" "top1"
+					"ParentName" "m2,panel_attach"
+					}
+				}
+			"TemplateBrush"
+				{
+				"ID"    "TSPEN_BTN_FLOOR_CLEAN:right"	
+				"Force" "white"
+				"Keys"
+					{
+					"Classname" "func_brush"
+					"Origin"    "0 -64 -65"
+					}
+				"LocalKeys"
+					{
+					"Targetname" "top2"
+					"ParentName" "m4,panel_attach"
+					}
+				}
+			"ChangeInstance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:bee2_floor>"
+			}
+		}
+	"Condition"
+		{
+		"instance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:weighted_black>"
+		"Result"
+			{
+			"TemplateBrush"
+				{
+				"ID"    "TSPEN_BTN_FLOOR_CLEAN:left"
+				"Force" "black"
+				"Keys"
+					{
+					"Classname" "func_brush"
+					"Origin"    "0 64 -65"
+					}
+				"LocalKeys"
+					{
+					"Targetname" "top1"
+					"ParentName" "m2,panel_attach"
+					}
+				}
+			"TemplateBrush"
+				{
+				"ID"    "TSPEN_BTN_FLOOR_CLEAN:right"
+				"Force" "black"
+				"Keys"
+					{
+					"Classname" "func_brush"
+					"Origin"    "0 -64 -65"
+					}
+				"LocalKeys"
+					{
+					"Targetname" "top2"
+					"ParentName" "m4,panel_attach"
+					} 
+				}
+			"ChangeInstance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:bee2_floor>"
+			}
+		}
+	
+	// Cube Button
+	"Condition"
+		{
+		"instance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:cube_white>"
+		"Result"
+			{
+			"TemplateBrush"
+				{
+				"ID"    "TSPEN_BTN_CUBE_CLEAN:left"	
+				"Force" "white"
+				"Keys"
+					{
+					"Classname" "func_brush"
+					"Origin"    "0 64 -65"
+					}
+				"LocalKeys"
+					{
+					"Targetname" "top1"
+					"ParentName" "m2,panel_attach"
+					}
+				}
+			"TemplateBrush"
+				{
+				"ID"    "TSPEN_BTN_CUBE_CLEAN:right"	
+				"Force" "white"
+				"Keys"
+					{
+					"Classname" "func_brush"
+					"Origin"    "0 -64 -65"
+					}
+				"LocalKeys"
+					{
+					"Targetname" "top2"
+					"ParentName" "m4,panel_attach"
+					}
+				}
+			"ChangeInstance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:bee2_cube>"
+			}
+		}
+	"Condition"
+		{
+		"instance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:cube_black>"
+		"Result"
+			{
+			"TemplateBrush"
+				{
+				"ID"    "TSPEN_BTN_CUBE_CLEAN:left"
+				"Force" "black"
+				"Keys"
+					{
+					"Classname" "func_brush"
+					"Origin"    "0 64 -65"
+					}
+				"LocalKeys"
+					{
+					"Targetname" "top1"
+					"ParentName" "m2,panel_attach"
+					}
+				}
+			"TemplateBrush"
+				{
+				"ID"    "TSPEN_BTN_CUBE_CLEAN:right"
+				"Force" "black"
+				"Keys"
+					{
+					"Classname" "func_brush"
+					"Origin"    "0 -64 -65"
+					}
+				"LocalKeys"
+					{
+					"Targetname" "top2"
+					"ParentName" "m4,panel_attach"
+					}
+				}
+			"ChangeInstance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:bee2_cube>"
+			}
+		}
+		
+	// Ball Button
 	"Condition"
 		{
 		"instance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:ball_white>"
@@ -21,7 +178,7 @@
 					}
 				"Replace"
 					{
-					"signage/signage_cube_button_world" "signage/signage_ball_button_world"
+					"signage/signage_box_button_world" "signage/signage_ball_button_world"
 					}
 				}
 			"TemplateBrush"
@@ -40,7 +197,7 @@
 					}
 				"Replace"
 					{
-					"signage/signage_cube_button_world" "signage/signage_ball_button_world"
+					"signage/signage_box_button_world" "signage/signage_ball_button_world"
 					}
 				}
 			"ChangeInstance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:bee2_ball>"
@@ -67,7 +224,7 @@
 					}
 				"Replace"
 					{
-					"signage/signage_cube_button_world" "signage/signage_ball_button_world"
+					"signage/signage_box_button_world" "signage/signage_ball_button_world"
 					}
 				}
 			"TemplateBrush"
@@ -86,7 +243,7 @@
 					}
 				"Replace"
 					{
-					"signage/signage_cube_button_world" "signage/signage_ball_button_world"
+					"signage/signage_box_button_world" "signage/signage_ball_button_world"
 					}
 				}
 			"ChangeInstance" "<ITEM_TSPEN_BUTTON_RETRACT_FLOOR:bee2_ball>"
