New format for tile configs

--- a/packages/valve/clean_style/styles/clean/vbsp_config.cfg
+++ b/packages/valve/clean_style/styles/clean/vbsp_config.cfg
@@ -1,59 +1,73 @@
 "Textures"
 	{
-	"Black"
+	"Black.Floor"
 		{
-		"Floor"      "metal/black_floor_metal_001a"
-		
-		"Ceiling"       "metal/black_ceiling_metal_001a"
-		"Ceiling"       "metal/black_ceiling_metal_001a"
-		"Ceiling"       "metal/black_ceiling_metal_001a"
-		"Ceiling"       "metal/black_wall_metal_002b"
-		"Ceiling_2x2"   "metal/black_wall_metal_002a"
-		
-		"1x1"          "metal/black_wall_metal_002c"
-		"2x1"          "metal/black_wall_metal_002e"
-		
-		"4x4"           "metal/black_wall_metal_002b"
-		"2x2"           "metal/black_wall_metal_002a"
+		"4x4"       "metal/black_floor_metal_001a"
+		"bullseye"  "BEE2/bullseye/black_floor_metal"
 		}
-	"White"
+	"Black.Ceiling"
 		{
-		"Floor"         "tile/white_floor_tile002a"
+		"4x4"   "metal/black_ceiling_metal_001a"
+		"4x4"   "metal/black_ceiling_metal_001a"
+		"4x4"   "metal/black_ceiling_metal_001a"
 		
-		"Ceiling"       "tile/white_ceiling_tile002a"
-		"Ceiling"       "tile/white_ceiling_tile002a"
-		"Ceiling"       "tile/white_ceiling_tile002a"
-		"Ceiling_2x2"   "tile/white_wall_tile003c"
-		"Ceiling"       "tile/white_wall_tile003c"
+		"1x1"   "metal/black_wall_metal_002b"
+		"2x2"   "metal/black_wall_metal_002a"
 		
-		"2x1"           "tile/white_wall_tile003a"
-		"1x1"           "tile/white_wall_tile003l"
-		"1x1"           "tile/white_wall_tile003l"
-		"1x1"           "tile/white_wall_tile003i" // 1x1 with marking
-		
-		"4x4"           "tile/white_wall_tile003f"
-		"2x2"           "tile/white_wall_tile003c"
-		"2x1"           "tile/white_wall_tile003a"
+		"bullseye"  "BEE2/bullseye/black_ceiling_metal"
 		}
+	"Black.Wall"
+		{
+		"1x1"   "metal/black_wall_metal_002c"
+		"2x1"   "metal/black_wall_metal_002e"
+		"2x2"   "metal/black_wall_metal_002a"
+		"4x4"   "metal/black_wall_metal_002b"
+		
+		"bullseye"  "BEE2/bullseye/black_wall_metal"
+		}
+	
+	"White.Floor"
+		{
+		"4x4"       "tile/white_floor_tile002a"
+		"bullseye"  "BEE2/bullseye/white_floor_tile"
+		
+		"special_4x4"   "tile/white_floor_tile002b"
+		}
+	"White.Ceiling"
+		{
+		"4x4"   "tile/white_ceiling_tile002a"
+		"4x4"   "tile/white_ceiling_tile002a"
+		"4x4"   "tile/white_ceiling_tile002a"
+		"2x2"   "tile/white_wall_tile003c"
+		"2x2"   "tile/white_wall_tile003c"
+		
+		"bullseye"      "BEE2/bullseye/white_ceiling_tile"
+		"special_4x4"   "tile/white_floor_tile002b"
+		}
+	"White.Wall"
+		{
+		"1x1"       "tile/white_wall_tile003l"
+		"1x1"       "tile/white_wall_tile003l"
+		"1x1"       "tile/white_wall_tile003i" // 1x1 with marking
+		
+		"2x1"       "tile/white_wall_tile003a"
+		"2x1"       "tile/white_wall_tile003a"
+		
+		"2x2"       "tile/white_wall_tile003c"
+		
+		"4x4"       "tile/white_wall_tile003f"
+		"bullseye"  "BEE2/bullseye/white_wall_tile"
+		"special_1x1"   "tile/white_wall_tile004j"
+		"special_4x4"   "tile/white_floor_tile002b"
+		}
+	
 	"Special"
 		{
-		// Used for angled and flip panels.
-		"White_wall"   "tile/white_wall_tile004j"
-		"White"        "tile/white_floor_tile002b"
-		
 		"Behind"       "anim_wp/framework/backpanels_cheap"
 		"Edge"         "anim_wp/framework/squarebeams"
 		"Edge_Special" "anim_wp/framework/squarebeams"
 		"PedestalSide" "plastic/plasticwall004a"
 		"Laserfield"   "effects/laserplane"
-		
-		"bullseye_white_wall"       "BEE2/bullseye/white_wall_tile"
-		"bullseye_white_floor"      "BEE2/bullseye/white_floor_tile"
-		"bullseye_white_ceiling"    "BEE2/bullseye/white_ceiling_tile"
-		
-		"bullseye_black_floor"      "BEE2/bullseye/black_floor_metal"
-		"bullseye_black_ceiling"    "BEE2/bullseye/black_ceiling_metal"
-		"bullseye_black_wall"       "BEE2/bullseye/black_wall_metal"
 		}
 	"Overlay"
 		{
@@ -74,15 +88,13 @@
 		"Star"          "signage/signage_shape_star"
 		"Wavy"          "signage/signage_shape_wavy"
 		}
-	}
-"Fizzler"
-	{
-	"Left"           "effects/fizzler_l"
-	"Center"         "effects/fizzler_center"
-	"Right"          "effects/fizzler_r"
-	"Short"          "effects/fizzler"
-	"Scanline"       "1"
-	"SplitInstances" "1"
+	"Fizzler"
+		{
+		"Left"      "effects/fizzler_l"
+		"Center"    "effects/fizzler_center"
+		"Right"     "effects/fizzler_r"
+		"Short"     "effects/fizzler"
+		}
 	}
 "Options"
 	{
