Fix white/black portal surfaces.

--- a/packages/panels/items/covered_pan_clean/vbsp_config.cfg
+++ b/packages/panels/items/covered_pan_clean/vbsp_config.cfg
@@ -10,7 +10,7 @@
 			"RemoveBrush"	"1"
 			
 			"Type"			"any"
-			"ResultVar"     "$pan_color"
+			"SetVar"        "$pan_color"
 			}
 		"Result"
 			{
