--- a/packages/panels/items/covered_pan_50s/vbsp_config.cfg
+++ b/packages/panels/items/covered_pan_50s/vbsp_config.cfg
@@ -23,6 +23,16 @@
 				"ramp_60_deg_open" "BEE2_COVERED_ANGLED_PANEL_50S:ang_60"
 				"ramp_90_deg_open" "BEE2_COVERED_ANGLED_PANEL_50S:ang_90"
 				}
+			// Distance needed for retracting
+			"MapInstVar"
+				{
+				"$animation" "$dist"
+				
+				"ramp_30_deg_open" "120"
+				"ramp_45_deg_open" "140"
+				"ramp_60_deg_open" "160"
+				"ramp_90_deg_open" "200"
+				}
 			"TemplateBrush"
 				{
 				"ID"        "$template"
@@ -32,6 +42,7 @@
 					"classname" "func_brush"
 					"solidbsp" "1"
 					"drawinfastreflection" "1"
+					"disableshadows" "1"
 					}
 				"LocalKeys"
 					{
