Add glow to clean plates

--- a/packages/tspen/large_faith/items/clean/vbsp_config.cfg
+++ b/packages/tspen/large_faith/items/clean/vbsp_config.cfg
@@ -9,27 +9,30 @@
 			"instvar" "$connectioncount > 0"
 			"Result"
 				{
-				"AddOverlay"
-					{
-					"File" "<ITEM_TSPEN_LARGE_CATAPULT:bee2_logic>"
-					}
 				"Condition"
 					{
 					"instvar" "$start_enabled 1"
 					"Result"
 						{
 						"setInstVar" "$start_skin 0"
+						"setInstVar" "$start_color 0 255 255"
 						}
 					"Else"
 						{
 						"setInstVar" "$start_skin 1"
+						"setInstVar" "$start_color 255 128 0"
 						}
+					}
+				"AddOverlay"
+					{
+					"File" "<ITEM_TSPEN_LARGE_CATAPULT:bee2_logic>"
 					}
 				}
 			"Else"
 				{
 				// With no inputs, force it to be on..
 				"setInstVar" "$start_skin 0"
+				"setInstVar" "$start_color 0 255 255"
 				"setInstVar" "$start_enabled 1"
 				}
 			}
