--- a/packages/valve/test_elements/items/faith/vbsp_config.cfg
+++ b/packages/valve/test_elements/items/faith/vbsp_config.cfg
@@ -24,10 +24,12 @@
 					"Result"
 						{
 						"setInstVar" "$start_skin 0"
+						"setInstVar" "$start_color 0 255 255"
 						}
 					"Else"
 						{
 						"setInstVar" "$start_skin 1"
+						"setInstVar" "$start_color 255 128 0"
 						}
 					}
 				// Only use the model on toggle-plates..	
@@ -53,17 +55,11 @@
 				"straight_in"	"FireUser1"
 				"enabledVar"    "$start_enabled"
 				}
-			}
-		"Condition"
-			{
-			"instvar" "$faith_type straight"
-			"Result"
+			"MapInstVar"
 				{
-				"SetInstVar" "$animation straightup"
-				}
-			"Else"
-				{
-				"SetInstVar" "$animation angled"
+				"$faith_type" "$animation"
+				"straight"    "straightup"
+				"angled"      "angled"
 				}
 			}
 		}
