Fix SetTile orientations

--- a/packages/blocks/items/half_wall/vbsp_config.cfg
+++ b/packages/blocks/items/half_wall/vbsp_config.cfg
@@ -9,10 +9,10 @@
 			{
 			"SetTile"
 				{
-				"Tile" "WWBB"
-				"Tile" "WWBB"
-				"Tile" "WWBB"
-				"Tile" "WWBB"
+				"Tile" "BBBB"
+				"Tile" "BBBB"
+				"Tile" "WWWW"
+				"Tile" "WWWW"
 				}
 			"Changeinstance" ""
 			}
@@ -26,10 +26,10 @@
 			{
 			"SetTile"
 				{
-				"Tile" "BWWB"
-				"Tile" "BWWB"
-				"Tile" "BWWB"
-				"Tile" "BWWB"
+				"Tile" "BBBB"
+				"Tile" "WWWW"
+				"Tile" "WWWW"
+				"Tile" "BBBB"
 				}
 			"Changeinstance" ""
 			}
@@ -41,10 +41,10 @@
 			{
 			"SetTile"
 				{
-				"Tile" "WBBW"
-				"Tile" "WBBW"
-				"Tile" "WBBW"
-				"Tile" "WBBW"
+				"Tile" "WWWW"
+				"Tile" "BBBB"
+				"Tile" "BBBB"
+				"Tile" "WWWW"
 				}
 			"Changeinstance" ""
 			}
