--- a/packages/valve/geometry/items/light_strip/vbsp_config.cfg
+++ b/packages/valve/geometry/items/light_strip/vbsp_config.cfg
@@ -7,12 +7,11 @@
 			{
 			"SetTile"
 				{
-				"adjustPos"     "1"
-				"centerStretch" "0"
-				"Tile" "n"
-				"Tile" "n"
-				"Tile" "n"
-				"Tile" "n"
+				"Offset" "0 48 0"
+				"Tile" "*"
+				"Tile" "*"
+				"Tile" "*"
+				"Tile" "*"
 				}
 			}
 		}
