Make Closed Solid Field paintable

--- a/packages/tdb_csfi/items/clean/vbsp_config.cfg
+++ b/packages/tdb_csfi/items/clean/vbsp_config.cfg
@@ -19,6 +19,23 @@
                 "UniqueModel"   "0"
                 "Brush"
                     {
+                    "Name"      "paint"
+                    "Left"      "BEE2/fizz/thedarkbomber/paintable"
+                    "Center"    "BEE2/fizz/thedarkbomber/paintable"
+                    "Right"     "BEE2/fizz/thedarkbomber/paintable"
+                    "Short"     "BEE2/fizz/thedarkbomber/paintable"
+                    "Nodraw"    "BEE2/fizz/thedarkbomber/paintable"
+                    "Keys"
+                        {
+                        "classname"     "func_brush"                        
+                        "Spawnflags"    "2" // Ignore +USE                      
+                        "solidity"      "0" // Toggle
+                        "rendermode"    "4"
+                        "renderamt"     "1"
+                        }
+                    }    
+                "Brush"
+                    {
                     "Name"      "fizz"
                     "Left"      "BEE2/fizz/thedarkbomber/clean_csfi_left"
                     "Center"    "BEE2/fizz/thedarkbomber/clean_csfi_center"
@@ -49,7 +66,7 @@
                         "rendermode"    "4"
                         "renderamt"     "1"
                         }
-                    }               
+                    }                          
                 }
             }
         }
