Switch to use material_modify_control for physler
This looks much better and is simpler

--- a/packages/phys_shield/items/clean/vbsp_config.cfg
+++ b/packages/phys_shield/items/clean/vbsp_config.cfg
@@ -1,39 +1,11 @@
 "Conditions"
 	{
-	// FizzlerModelPair runs only on start sides, so we need to first overlay
-	// them all
-	"Condition"
-		{
-		"Priority"  "-1"
-		"instance"	"instances/BEE2/clean/items/physler/model.vmf"
-		"Result"
-			{
-			"AddOverlay"
-				{
-				"File" "instances/BEE2/clean/items/physler/model_common.vmf"
-				}
-			}
-		}
-		
-	"Condition"
-		{
-		"instance"	"instances/BEE2/clean/items/physler/model.vmf"
-		"Result"
-			{
-			"FizzlerModelPair"
-				{
-				"StartInst"		"instances/BEE2/clean/items/physler/model_start.vmf"
-				"EndInst"		"instances/BEE2/clean/items/physler/model_end.vmf"
-				"MidInst"		""
-				"uniqueName"    "1"
-				}
-			}
-		}
 	"Condition"  
 		{ 
 		"instance"	"instances/BEE2/clean/items/physler/base.vmf"  
 		"result"  
 			{
+			"Pack" "PACK_FG_PHYSLER_COMMON"
 			"Pack" "PACK_FG_PHYSLER_CLEAN"
 			"Pack" "PACK_BEE2_CUST_FIZZ_MDL"
 			"Has"
@@ -52,19 +24,27 @@
 					"Center"	"BEE2/fizz/phys_shield/clean_pshield_center"
 					"Right"		"BEE2/fizz/phys_shield/clean_pshield_right"
 					"Short"		"BEE2/fizz/phys_shield/physics_shield"
+					"MergeBrushes" "1"
 					"Keys"
 						{
 						"classname" 	"func_brush"
 						"Solidity"		"1" // Never solid
 						}
+					// Implies mergebrushes..
+					"MaterialModify"
+						{
+						"name" "mat_mod"
+						"var"  "$outputintensity"
+						}
 					}
 				"Brush"
 					{
-					"Name"		"clip"
-					"Left"		"tools/toolstrigger"
-					"Center"	"tools/toolstrigger"
-					"Right"		"tools/toolstrigger"
-					"Short"		"tools/toolstrigger"
+					"Name"		    "clip"
+					"Left"		    "tools/toolstrigger"
+					"Center"	    "tools/toolstrigger"
+					"Right"		    "tools/toolstrigger"
+					"Short"		    "tools/toolstrigger"
+					"MergeBrushes"  "1"
 					"Keys"
 						{
 						"classname" 	"func_clip_vphysics"
