Add 50s variant with material_modify

--- a/packages/phys_shield/items/clean/vbsp_config.cfg
+++ b/packages/phys_shield/items/clean/vbsp_config.cfg
@@ -19,11 +19,11 @@
 				"UniqueModel"	"0"
 				"Brush"
 					{
-					"Name"		"fx"
-					"Left"		"BEE2/fizz/phys_shield/clean_pshield_left"
-					"Center"	"BEE2/fizz/phys_shield/clean_pshield_center"
-					"Right"		"BEE2/fizz/phys_shield/clean_pshield_right"
-					"Short"		"BEE2/fizz/phys_shield/physics_shield"
+					"Name"		    "fx"
+					"Left"		    "BEE2/fizz/phys_shield/clean_pshield_left"
+					"Center"	    "BEE2/fizz/phys_shield/clean_pshield_center"
+					"Right"		    "BEE2/fizz/phys_shield/clean_pshield_right"
+					"Short"		    "BEE2/fizz/phys_shield/physics_shield"
 					"MergeBrushes" "1"
 					"Keys"
 						{
@@ -65,7 +65,7 @@
 						"wait"          "0.1"
 						"spawnflags"    "8" // Physics Objects
 						"vscripts"      "BEE2/trig_touch_fx.nut"
-						"thinkfunc"     "ThinkFunc"
+						"thinkfunction" "ThinkFunc"
 						}
 					}
 				}
