--- a/packages/phys_shield/items/clean/vbsp_config.cfg
+++ b/packages/phys_shield/items/clean/vbsp_config.cfg
@@ -2,7 +2,7 @@
 	{
 	"Condition"  
 		{ 
-		"instance"	"instances/BEE2/clean/items/physler/base.vmf"  
+		"instance"	"<ITEM_PHYS_SHIELD:fizz_base>"  
 		"result"  
 			{
 			"Pack" "PACK_FG_PHYSLER_COMMON"
