Make Clean droppers extend themselves if there's room

--- a/packages/valve/test_elements/items/cube.cfg
+++ b/packages/valve/test_elements/items/cube.cfg
@@ -31,6 +31,71 @@
 				"RespawnIn" "voice_rl:FireUser1"
 				}
 			}
+			
+		// If there's empty room sufficent for a taller tube,
+		// add it.
+		"Condition"
+			{
+			"BlockType"
+				{
+				"Offset" "0 0 -1"
+				"Type"   "VOID"
+				}
+			"BlockType"
+				{
+				"Offset" "0 0 -2"
+				"Type"   "VOID"
+				}
+			"BlockType"
+				{
+				"Offset" "0 0 -3"
+				"Type"   "VOID"
+				}
+			"Result"
+				{
+				// Mark as embedded, so other items don't fill the space.
+				"SetBlock"
+					{
+					"Offset" "0 0 -1"
+					"Type"   "EMBED"
+					}
+				"SetBlock"
+					{
+					"Offset" "0 0 -2"
+					"Type"   "EMBED"
+					}
+				"SetBlock"
+					{
+					"Offset" "0 0 -3"
+					"Type"   "EMBED"
+					}
+				// Remove the top brush
+				"AlterTexture"
+					{
+					"Dir" "0 0 1"
+					"Pos" "0 0 -4"
+					"Tex" "<delete>"
+					}
+					
+				// Move cubes to the top of the new dropper hole
+				"SetInstVar" "$cube_off 0 0 -384"
+				"AddOverlay"
+					{
+					"File" "<ITEM_CUBE:bee2_dropper_long_shaft>"
+					}
+				}
+			// Blocked, use original dropper hole size.
+			"Else"
+				{
+				"AddOverlay"
+					{
+					"File" "<ITEM_CUBE:bee2_dropper_short_shaft>"
+					}
+				"SetInstVar" "$cube_off 0 0 0"
+				}
+			}
+			
+		
 		"Condition"
 			{
 			"instvar"	"$cube_type 0"
@@ -41,6 +106,11 @@
 					"Cube"					"1"
 					"CubeStandard"			"1"
 					"CubeDropperStandard"	"1"
+					}
+				"addOverlay"
+					{
+					"File"   "<ITEM_CUBE:bee2_shaft_standard>"
+					"Offset" "$cube_off"
 					}
 				"addOverlay"
 					{
@@ -61,7 +131,14 @@
 					}
 				"addOverlay"
 					{
-					"File"	"<ITEM_CUBE:bee2_dropper_companion>"
+					"File"   "<ITEM_CUBE:bee2_shaft_companion>"
+					"Offset" "$cube_off"
+					"Silent" "1"
+					}
+				"addOverlay"
+					{
+					"File"   "<ITEM_CUBE:bee2_dropper_companion>"
+					"Silent" "1"
 					}
 				}
 			}
@@ -78,7 +155,14 @@
 					}
 				"addOverlay"
 					{
-					"File"	"<ITEM_CUBE:bee2_dropper_reflect>"
+					"File"   "<ITEM_CUBE:bee2_shaft_reflect>"
+					"Offset" "$cube_off"
+					"Silent" "1"
+					}
+				"addOverlay"
+					{
+					"File"   "<ITEM_CUBE:bee2_dropper_reflect>"
+					"Silent" "1"
 					}
 				}
 			}
@@ -95,7 +179,14 @@
 					}
 				"addOverlay"
 					{
-					"File"	"<ITEM_CUBE:bee2_dropper_sphere>"
+					"File"   "<ITEM_CUBE:bee2_shaft_sphere>"
+					"Offset" "$cube_off"
+					"Silent" "1"
+					}
+				"addOverlay"
+					{
+					"File"   "<ITEM_CUBE:bee2_dropper_sphere>"
+					"Silent" "1"
 					}
 				}
 			}
@@ -112,7 +203,14 @@
 					}
 				"addOverlay"
 					{
-					"File"	"<ITEM_CUBE:bee2_dropper_franken>"
+					"File"   "<ITEM_CUBE:bee2_shaft_franken>"
+					"Offset" "$cube_off"
+					"Silent" "1"
+					}
+				"addOverlay"
+					{
+					"File"   "<ITEM_CUBE:bee2_dropper_franken>"
+					"Silent" "1"
 					}
 				}
 			}
