Use modified frame model for glass
This fixes leaks, and reduces the number of models

--- a/packages/glass/items/break_gls_clean/vbsp_config.cfg
+++ b/packages/glass/items/break_gls_clean/vbsp_config.cfg
@@ -13,8 +13,9 @@
 				"border_size"   "3"
 				"thickness"     "8"
 				}
-			"Pack" "BEE2_BREAKABLE_GLASS_SURF_CLEAN"
-			"Pack" "BEE2_BREAKABLE_GLASS_SURF_GIBS"
+			"Pack"     "BEE2_BREAKABLE_GLASS_SURF_CLEAN"
+			"Pack"     "BEE2_BREAKABLE_GLASS_SURF_GIBS"
+			"PackFile" "BEE2/props_ingame/glass_frame_corner.mdl"
 			}
 		}
 	}
