Add template for clean breakable glass

--- a/packages/glass/items/break_gls_clean/vbsp_config.cfg
+++ b/packages/glass/items/break_gls_clean/vbsp_config.cfg
@@ -8,7 +8,7 @@
 			"BreakableGlass"
 				{
 				"item"          "ITEM_BEE2_BREAKABLE_GLASS"
-				"material"      "BEE2/surf_glass/glass_clean"
+				"template"      "BEE2_BREAKABLE_GLASS_TEMP_CLEAN"
 				"offset"        "4"
 				"border_size"   "3"
 				"thickness"     "8"
